# sqlite3-pcre

./: CMakeLists.txt  Makefile  README.md  pcre.c  pcre.h
